--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>PureZone Cleaning</title>
+</head>
+<body>
+  <h1>Welcome to PureZone Cleaning</h1>
+  <p>Your trusted cleaning service.</p>
+</body>
+</html>
